--- a/assets/scss/_header-nav-footer.scss
+++ b/assets/scss/_header-nav-footer.scss
@@ -6,10 +6,7 @@
 # Estilos base (móvil por defecto)
 --------------------------------------------------------------*/
 .header {
-    --background-color: #1b1b1b;
-    --contrast-color: #444444;
-    --default-color: #fff;
-    --header-color: color-mix(in srgb, var(--default-color), transparent 80%);
+
     color: var(--default-color);
     position: fixed;
     top: 0;
@@ -51,7 +48,7 @@
 .header .header-container {
     border-radius: 20px;
     padding: 15px;
-    background-color: color-mix(in srgb, var(--background-color), white 4%);
+    background-color: var(--color-mix-header-container-1);
     border: 1px solid color-mix(in srgb, var(--default-color), transparent 80%);
     border-right: 4px solid var(--header-color);
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.05);
@@ -124,13 +121,20 @@
 /* Links sociales */
 .header .social-links {
     margin: 0 0 10px 0;
+    .header .social-links {
+        margin: 0 0 10px 0;
+        display: flex;
+        justify-content: center;
+        gap: 6px;
+    }
+    
 }
 .header .social-links a {
     font-size: 16px;
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    background: color-mix(in srgb, var(--default-color), transparent 90%);
+    background: var(--social-link-color);
     color: var(--default-color);
     margin: 0 2px;
     border-radius: 50%;
@@ -162,7 +166,7 @@
     transition: background-color 0.3s;
 }
 .header-toggle:hover {
-    background-color: color-mix(in srgb, var(--accent-color) 90%, white 15%);
+    background-color: var(--color-mix-header-container-2);
 }
 
 /* Scroll solo al hover en desktop */
@@ -330,13 +334,13 @@
     max-height: 1000px;
     opacity: 1;
     padding: 5px 10px;
-    background-color: color-mix(in srgb, var(--background-color), white 5%);
+    background-color: var(--color-mix-header-container-3);
 }
 .navmenu li.dropdown.active>ul>li.dropdown.active>ul {
     max-height: 1000px;
     opacity: 1;
     padding: 5px 10px;
-    background-color: color-mix(in srgb, var(--background-color), white 10%);
+    background-color: var(--color-mix-header-container-4);
 }
 
 /*==============================================================
