--- a/assets/scss/_markdown.scss
+++ b/assets/scss/_markdown.scss
@@ -10,7 +10,7 @@
 --------------------------------------------------------------*/
 #md-content pre.markdown-code {
     position: relative;
-    background: var(--default-color);
+    background: var(--md-box-color);
     border-radius: 10px;
     padding: 2.2rem 1rem 1rem;
     /* padding-top suficiente para el nombre del lenguaje */
