-- fix color #ed0909;

--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -1,8 +1,9 @@
 /**
 * Template Name: portfolio
 * Template URL: https://alejandroms.es
-* Updated: Feb 10 2026 with Bootstrap v5.3.7
-* Author: Alejandro Muñoz Salas
+* Updated: Feb 13
+ 2026 with Bootstrap v5.3.7
+* Author: Alejandro Muñoz
 */
 
 /*--------------------------------------------------------------
