fix nav-color #1f1f1f

--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -69,7 +69,7 @@
       --section-alt-surface: #ececec;
     }
     /* Nav Menu Colors */
-    --nav-color: rgba(31, 31, 31, 0.7);        /* Links normales en nav (oscuro semi-transparente) */
+    --nav-color: #1f1f1f;        /* Links normales en nav (oscuro semi-transparente) */
     --nav-hover-color: #ed0909;                /* Links al pasar hover */
     --nav-mobile-background-color: #e6e6e6;    /* Fondo menú móvil */
     --nav-dropdown-background-color: #f0f0f0;  /* Fondo dropdown */
