--- a/assets/scss/_markdown.scss
+++ b/assets/scss/_markdown.scss
@@ -49,3 +49,12 @@
     text-transform: uppercase;
     font-weight: 500;
   }
+
+  #md-title{
+    padding-top: 30px;
+  }
+
+  #md-date{
+    font-size: small;
+    color:#8b949e;
+  }
