--- a/assets/scss/_markdown.scss
+++ b/assets/scss/_markdown.scss
@@ -8,7 +8,7 @@
 /*--------------------------------------------------------------
 # Markdown
 --------------------------------------------------------------*/
-#md-content pre.markdown-code {
+.md-content pre.markdown-code {
     position: relative;
     background: var(--md-box-color);
     border-radius: 10px;
@@ -22,7 +22,7 @@
   }
   
   /* Quitar fondo al code */
-  #md-content pre.markdown-code code {
+  .md-content pre.markdown-code code {
     background: transparent !important;
     padding: 0;
     border-radius: 0;
@@ -30,7 +30,7 @@
   }
   
   /* Botón copiar */
-  #md-content pre.markdown-code .copy-btn {
+  .md-content pre.markdown-code .copy-btn {
     position: absolute;
     top: 8px;
     right: 8px;
@@ -39,7 +39,7 @@
   }
   
   /* Lenguaje arriba a la izquierda */
-  #md-content pre.markdown-code::before {
+  .md-content pre.markdown-code::before {
     content: attr(data-lang);
     position: absolute;
     top: 8px;
@@ -50,11 +50,11 @@
     font-weight: 500;
   }
 
-  #md-title{
+  .md-title{
     padding-top: 30px;
   }
 
-  #md-date{
+  .md-date{
     font-size: small;
     color:#8b949e;
   }
