--- a/components/services.html
+++ b/components/services.html
@@ -36,7 +36,10 @@
               </div>
             </div>
           </div>
-  
+          <div class="row justify-content-center" id="tutorial-cards">
+            <!-- Cards dinámicas se inyectarán aquí -->
+          </div>
+          
           <div class="row justify-content-center">
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
               <div class="service-card position-relative z-1">
